# Agentus-Timus

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE_SESSION_LOG_2026-02-01.md  CONTEXT_OVERFLOW_FIX.md  CONTRIBUTING.md  D435_MOONDREAM3_SETUP.md  DEEP_RESEARCH_V5.1_IMPLEMENTATION_PLAN.md  DEEP_RESEARCH_V5_UPGRADE.md  DEVELOPER_AGENT_REVIEW.md  DEVELOPER_AGENT_TEST_RESULTS.md  DEVELOPER_AGENT_V2_CONTEXT_FILES_UPDATE.md  DEVELOPER_AGENT_V2_IMPROVEMENTS.md  DEVELOPER_AGENT_V2_REAL_PROJECT_TEST.md  DEVELOPMENT_HISTORY_VISION_STABILITY.md  DOM_FIRST_IMPLEMENTATION_REPORT.md  DOM_FIRST_SUCCESS_REPORT.md  Dockerfile  IMPLEMENTATION_PLAN.md  LIST_AGENT_FILES_FIX.md  LOOP_DETECTION_FIX.md  META_AGENT_IMPROVEMENTS.md  MOONDREAM_NEMOTRON_SETUP.md  NOTICE  OCR_MULTI_BACKEND.md  PIPELINE_TEST_RESULTS.md  PROGRESS_REPORT_2026-02-08.md  QWEN_VL_SETUP.md  README.md  ROADMAP.md  ROBUSTNESS_IMPROVEMENTS.md  SCREEN_CHANGE_GATE_INTEGRATION.md  SESSION_LOG_2026-02-08.md  SKILL_SYSTEM_COMPLETE.md  TIMUS_INVENTORY.md  TYPING_METHODS_FIX.md  Timus Autonomie Roadmap.txt  Timus Ordnerstruktur - Claude.html  UI_NAVIGATION_SOLUTION.md  (+96 more)
.githooks/: pre-commit
agent/: agent_registry.py  base_agent.py  creative_agent.py  deep_research_agent.py  developer_agent.py  developer_agent_v2.py  dynamic_tool_agent.py  dynamic_tool_mixin.py  prompts.py  providers.py  qwen_visual_agent.py  reasoning_agent.py  reasoning_agent_improved.py  result_aggregator.py  skills.yml  timus.py  timus_consolidated.py  timus_react.py  vision_cookie_agent.py  vision_executor_agent.py  visual_agent.py  (+1 more)
(+1130 files in other folders)
